Home section container overflow fixed

--- a/src/constants/styles.css
+++ b/src/constants/styles.css
@@ -5,7 +5,8 @@
 }
 
 .navbar-container {
-    /* height: 60px;  */
+    height: 100%; 
+    /* width: 50%; */
 }
 
 .no-margin-padding{
